--- a/index.html
+++ b/index.html
@@ -18,11 +18,33 @@
             </ul>
         </nav>
     </header>
+    <div class="slider-container">
+        <div class="slider">
+            <div class="slide active">
+                <img src="imagen1.jpg" alt="Imagen 1">
+            </div>
+            <div class="slide">
+                <img src="imagen2.jpg" alt="Imagen 2">
+            </div>
+            <div class="slide">
+                <img src="imagen3.jpg" alt="Imagen 3">
+            </div>
+        </div>
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+    </div>
     <section id="sobre-nosotros">
         <h2>Sobre Nosotros</h2>
-        <p>La Fundación Alas está dedicada a apoyar a personas necesitadas a través de diversas iniciativas.</p>
+        <p>Descripción de la fundación...</p>
     </section>
-    <!-- Repite secciones para Proyectos, Cómo Ayudar, etc. -->
+    <section id="proyectos">
+        <h2>Proyectos</h2>
+        <p>Detalles de los proyectos actuales...</p>
+    </section>
+    <section id="como-ayudar">
+        <h2>Cómo Ayudar</h2>
+        <p>Información sobre cómo contribuir...</p>
+    </section>
     <footer>
         <p>Contacto: info@fundacionalas.org</p>
     </footer>
