--- a/index.html
+++ b/index.html
@@ -7,46 +7,44 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>Fundación Alas</h1>
-        <nav>
-            <ul>
-                <li><a href="#sobre-nosotros">Sobre Nosotros</a></li>
-                <li><a href="#proyectos">Proyectos</a></li>
-                <li><a href="#como-ayudar">Cómo Ayudar</a></li>
-                <li><a href="#contacto">Contacto</a></li>
-            </ul>
-        </nav>
-    </header>
-    <div class="slider-container">
-        <div class="slider">
-            <div class="slide active">
-                <img src="imagen1.jpg" alt="Imagen 1">
-            </div>
-            <div class="slide">
-                <img src="imagen2.jpg" alt="Imagen 2">
-            </div>
-            <div class="slide">
-                <img src="imagen3.jpg" alt="Imagen 3">
-            </div>
+    <header class="site-header">
+        <div class="container">
+            <h1>Fundación Alas</h1>
+            <nav class="main-nav">
+                <ul>
+                    <li><a href="#sobre-nosotros">Sobre Nosotros</a></li>
+                    <li><a href="#proyectos">Proyectos</a></li>
+                    <li><a href="#como-ayudar">Cómo Ayudar</a></li>
+                    <li><a href="#contacto">Contacto</a></li>
+                </ul>
+            </nav>
         </div>
-        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+    </header>
+    <div class="hero-slider">
+        <!-- Slider implementation -->
     </div>
-    <section id="sobre-nosotros">
-        <h2>Sobre Nosotros</h2>
-        <p>Descripción de la fundación...</p>
+    <section id="sobre-nosotros" class="section-padding">
+        <div class="container">
+            <h2>Sobre Nosotros</h2>
+            <p>Descripción de la fundación...</p>
+        </div>
     </section>
-    <section id="proyectos">
-        <h2>Proyectos</h2>
-        <p>Detalles de los proyectos actuales...</p>
+    <section id="proyectos" class="section-padding">
+        <div class="container">
+            <h2>Proyectos</h2>
+            <p>Detalles de los proyectos actuales...</p>
+        </div>
     </section>
-    <section id="como-ayudar">
-        <h2>Cómo Ayudar</h2>
-        <p>Información sobre cómo contribuir...</p>
+    <section id="como-ayudar" class="section-padding">
+        <div class="container">
+            <h2>Cómo Ayudar</h2>
+            <p>Información sobre cómo contribuir...</p>
+        </div>
     </section>
-    <footer>
-        <p>Contacto: info@fundacionalas.org</p>
+    <footer class="site-footer">
+        <div class="container">
+            <p>Contacto: info@fundacionalas.org</p>
+        </div>
     </footer>
     <script src="script.js"></script>
 </body>
