--- a/index.html
+++ b/index.html
@@ -8,18 +8,30 @@
 </head>
 <body>
     <header class="site-header">
-        <div class="container">
-            <h1>Fundación Alas</h1>
-            <nav class="main-nav">
-                <ul>
-                    <li><a href="#sobre-nosotros">Sobre Nosotros</a></li>
-                    <li><a href="#proyectos">Proyectos</a></li>
-                    <li><a href="#como-ayudar">Cómo Ayudar</a></li>
-                    <li><a href="#contacto">Contacto</a></li>
-                </ul>
-            </nav>
+    <div class="top-bar">
+        <div class="logo">
+            <img src="logo.png" alt="Logo Alas">
+            <span>Impulsando el vuelo de la juventud</span>
         </div>
-    </header>
+        <div class="social-contact">
+            <a href="https://facebook.com" target="_blank"><img src="facebook-icon.png" alt="Facebook"></a>
+            <a href="https://instagram.com" target="_blank"><img src="instagram-icon.png" alt="Instagram"></a>
+            <div class="phone-numbers">
+                <span>📞 55 5972 8061</span>
+                <span>📞 55 3565 1905</span>
+            </div>
+        </div>
+    </div>
+    <nav class="main-nav">
+        <ul>
+            <li><a href="#mission">Nuestra misión</a></li>
+            <li><a href="#achievements">Logros que dan ALAS</a></li>
+            <li><a href="#scholarships">Bécalos aquí</a></li>
+            <li><a href="#faq">Preguntas frecuentes</a></li>
+            <li><a href="#contact">Contacto</a></li>
+        </ul>
+    </nav>
+</header>
     <div class="hero-slider">
         <!-- Slider implementation -->
     </div>
